# torchruri

./: .gitignore  README.md  pyproject.toml
src/torchruri/: __init__.py  activation_functions.py  constants.py  data_loader.py  loss_functions.py  solver.py  types.py  ufunc.py  utils.py
src/torchruri/auto_grad/: __init__.py  _no_grad.py  tensor.py
src/torchruri/nn/: __init__.py  _layer.py  _nn.py  linear.py
test/: run_test_tensor_100_times.sh  tensor_test.py  test_activation_function.py  test_data_loader.py  test_linear.py  test_loss_functions.py  test_module.py  test_solver.py  test_temoins.ipynb  test_temoins.py  test_tensor.py  test_utils.py
