[project]
name = "torchruri"
version = "0.1.0"
description = "A full clone of pytorch implemented using only python and numpy"
authors = [
    {name = "iarimanana",email = "iarimananarandrianarisoa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pylsp-mypy (>=0.7.0,<0.8.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pylint (>=4.0.4,<5.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "tqdm (>=4.67.3,<5.0.0)"
]
    
[tool.poetry]
packages = [{include = "torchruri", from = "src"}]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100 

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "TCH"]

[tool.mypy]
disable_error_code = ["untyped-decorator"]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_any_generics = true
check_untyped_defs = true   

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
